<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".auth_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="-16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginVertical="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="147dp"
                android:layout_height="125dp"
                app:srcCompat="@drawable/soccer"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="101dp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="210dp"
                android:layout_height="55dp"
                android:text="@string/title_text"
                android:textColor="@color/black"
                android:textSize="16pt"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="154dp"
                tools:layout_editor_absoluteY="141dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="46dp"
                android:layout_height="44dp"
                app:srcCompat="@drawable/img1"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="46dp"
                tools:layout_editor_absoluteY="263dp" />

            <EditText
                android:id="@+id/login"
                android:layout_width="200dp"
                android:layout_height="48dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/name_edit_text"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="118dp"
                tools:layout_editor_absoluteY="263dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginVertical="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="46dp"
                android:layout_height="44dp"
                app:srcCompat="@drawable/img2"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="46dp"
                tools:layout_editor_absoluteY="338dp" />


            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="200dp"
                android:layout_height="48dp"
                android:ems="10"
                android:inputType="textPassword"
                android:text="@string/password_edit_text"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="118dp"
                tools:layout_editor_absoluteY="338dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:gravity="center"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkbox_text"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="118dp"
                tools:layout_editor_absoluteY="392dp" />


            <Button
                android:id="@+id/signInButton"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/green"
                android:clickable="true"
                android:onClick="onClick"
                android:text="@string/sign_in_text"
                android:textAllCaps="false"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="125dp"
                tools:layout_editor_absoluteY="524dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password_text"
                android:textColor="@color/black"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="154dp"
                tools:layout_editor_absoluteY="452dp"
                />

            <Button
                android:id="@+id/changePasswordButton"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/green"
                android:clickable="true"
                android:onClick="onClick"
                android:text="Сменить пароль"
                android:textAllCaps="false"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="125dp"
                tools:layout_editor_absoluteY="524dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_account_text"
                android:textColor="@color/black"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="144dp"
                tools:layout_editor_absoluteY="598dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/fragment_signUpButton"
                android:layout_width="120dp"
                android:layout_height="48dp"
                android:backgroundTint="@color/white"
                android:text="@string/sign_up_text"
                android:textAllCaps="false"
                android:textStyle="bold"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="154dp"
                tools:layout_editor_absoluteY="634dp"
                />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>